tests passing, modified dind-go && pipeline to match

--- a/ci/images/dind-go/Dockerfile
+++ b/ci/images/dind-go/Dockerfile
@@ -2,16 +2,18 @@
 FROM docker:dind
 
 # gcc for cgo
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apk update && apk --no-cache add  \
 	g++ \
 	gcc \
-	libc6-dev \
+	# libc6-dev \
 	make \
-	pkg-config \
+	# pkg-config \
 	&& rm -rf /var/lib/apt/lists/*
 
 ENV GOLANG_VERSION 1.15.2
 
+RUN mkdir /lib64 \
+  && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
 RUN url="https://golang.org/dl/go1.15.2.linux-amd64.tar.gz"; \
   wget -O go.tgz "$url"; \
   tar -C /usr/local -xzf go.tgz; \
