--- a/config/config.conf
+++ b/config/config.conf
@@ -21,3 +21,4 @@ csrf_token_expiry = "10m"
 csrf_cookie_name = "X-CSRF-Token"
 default_page_size = "10"
 time_zone = "America/Santo_Domingo"
+default_language = "english"
